# Musicefy

./: .gitignore  BUILD_PORTABLE.md  CHANGES.md  CMakeLists.txt  CONTRIBUTING.md  GETTING_STARTED.md  LICENSE  Musicefy.Tests\Services\SubsonicClientTests.cs  Musicefy.sln  README.md  build-portable.bat  fix-msbuild.patch  musicefy-ci-and-core-fix.patch
Musicefy/: App.config  App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  Musicefy.csproj  MusicefyApp.cs  SettingsWindow.xaml.cs  SplashScreen.xaml  SplashScreen.xaml.cs
Musicefy.Converters/: ThemePreviewConverter.cs  ThemeThumbnailConverter.cs
Musicefy.Core/: Musicefy.Core.csproj  SourceTypes.cs  packages.config
Musicefy.Tests/: Musicefy.Tests.csproj
Themes/: Light.xaml
cmake/: CompilerWarnings.cmake  QtHelpers.cmake  (+1 more)
src/app/: AppContainer.cpp  AppContainer.h  AppLifecycle.cpp  AppLifecycle.h  CMakeLists.txt  MainWindow.cpp  MainWindow.h  main.cpp  musicefy.manifest  musicefy.rc
src/app/viewmodels/: AlbumViewModel.cpp  AlbumViewModel.h  ArtistViewModel.cpp  ArtistViewModel.h  DiscoverViewModel.cpp  DiscoverViewModel.h  HomeViewModel.cpp  HomeViewModel.h  LibraryViewModel.cpp  LibraryViewModel.h  MainViewModel.cpp  MainViewModel.h  PlayerViewModel.cpp  PlayerViewModel.h  PlaylistViewModel.cpp  PlaylistViewModel.h  SearchViewModel.cpp  SearchViewModel.h  SourceViewModel.cpp  SourceViewModel.h
src/app/widgets/: AddSourceDialog.cpp  AddSourceDialog.h  AlbumView.cpp  AlbumView.h  AppearancePanel.cpp  AppearancePanel.h  ArtistView.cpp  ArtistView.h  CardColorGlowBehavior.cpp  CardColorGlowBehavior.h  CoverImage.cpp  CoverImage.h  CreatePlaylistDialog.cpp  CreatePlaylistDialog.h  DiscoverSettingsPanel.cpp  DiscoverSettingsPanel.h  DiscoverView.cpp  DiscoverView.h  DownloadsSettingsPanel.cpp  DownloadsSettingsPanel.h  ExtensionsSettingsPanel.cpp  ExtensionsSettingsPanel.h  FolderLibraryControl.cpp  FolderLibraryControl.h  HomeView.cpp  HomeView.h  Icons.h  LibrarySettingsPanel.cpp  LibrarySettingsPanel.h  LibraryView.cpp  LibraryView.h  LyricsPanel.cpp  LyricsPanel.h  NowPlayingBar.cpp  NowPlayingBar.h  NowPlayingView.cpp  NowPlayingView.h  OverlayStackAnimator.cpp  OverlayStackAnimator.h  PlaylistPickerDialog.cpp  (+19 more)
src/core/: CMakeLists.txt
src/core/database/: Database.cpp  Database.h  DatabaseConfig.cpp  DatabaseConfig.h  LibraryRepository.cpp  LibraryRepository.h  LibraryScanner.cpp  LibraryScanner.h  TagReader.cpp
src/core/database/migrations/: 0001_initial_schema.sql
src/core/di/: ServiceCollection.cpp  ServiceCollection.h
src/core/interfaces/: IAudioPlayer.h  IBrowseService.h  IDownloadService.h  IExtensionManager.h  IFolderDataProvider.h  IHealthCheckService.h  ILibraryService.h  IMusicSourceProvider.h  IMusicSourceSession.h  IQueueManager.h  ISearchHistoryService.h  ISettingsControl.h  IStreamingSourceManager.h
src/core/models/: AlbumInfo.cpp  AlbumInfo.h  ArtistInfo.cpp  ArtistInfo.h  AutoPlaylistInfo.cpp  AutoPlaylistInfo.h  BrowseSection.cpp  BrowseSection.h  ExtensionManifest.cpp  ExtensionManifest.h  HomeSection.cpp  HomeSection.h  MusicFile.cpp  MusicFile.h  MusicFileExtensions.cpp  MusicFileExtensions.h  Playlist.h  PlaylistInfo.h  SearchHistory.cpp  SearchHistory.h  SearchResultGroup.cpp  SearchResultGroup.h  SearchSourceMode.cpp  SearchSourceMode.h  SourceConfigField.cpp  SourceConfigField.h  SourceHealthState.cpp  SourceHealthState.h  SourceTypes.cpp  SourceTypes.h  StreamingSource.cpp  StreamingSource.h
src/core/playback/: MediaKeyFilter.cpp  MediaKeyFilter.h  PlaybackService.cpp  PlaybackService.h  QueueManager.cpp  QueueManager.h  SmtcController.cpp  SmtcController.h
src/core/services/: ArtistAlbumService.cpp  ArtistAlbumService.h  ArtworkEnrichment.cpp  ArtworkEnrichment.h  BrowseService.cpp  BrowseService.h  ColorExtractor.cpp  ColorExtractor.h  CrashLogger.cpp  CrashLogger.h  DownloadService.cpp  DownloadService.h  EqualizerService.cpp  EqualizerService.h  ExtensionManager.cpp  ExtensionManager.h  ExtensionRepoService.cpp  ExtensionRepoService.h  HealthCheckService.cpp  HealthCheckService.h  ImageCache.cpp  ImageCache.h  LibraryService.cpp  LibraryService.h  LyricsService.cpp  LyricsService.h  NavigationService.cpp  NavigationService.h  PathToImage.cpp  PathToImage.h  ReplayGainService.cpp  ReplayGainService.h  ScrobbleService.cpp  ScrobbleService.h  SearchHistoryService.cpp  SearchHistoryService.h  SettingsControl.cpp  SettingsControl.h  SleepTimer.cpp  SleepTimer.h  (+5 more)
src/core/sources/: HttpClient.cpp  HttpClient.h  LocalFolderProvider.cpp  LocalFolderProvider.h  StreamingSourceManager.cpp  StreamingSourceManager.h  SubsonicProvider.cpp  SubsonicProvider.h  YouTubeProvider.cpp  YouTubeProvider.h
src/core/sources/youtube/: BotDetectionMitigator.cpp  BotDetectionMitigator.h  Cipher.cpp  Cipher.h  InnerTubeClient.cpp  InnerTubeClient.h  JsCipherExtractor.cpp  JsCipherExtractor.h  PlayerResponse.cpp  PlayerResponse.h  StreamCache.cpp  StreamCache.h  YouTubeExtractor.cpp  YouTubeExtractor.h  YouTubeUrlParser.cpp  YouTubeUrlParser.h  YtDlpProcess.cpp  YtDlpProcess.h
src/core/theme/: AppTheme.h  AppThemeColorSchemes.cpp  AppThemeColorSchemes.h  HctFacade.cpp  HctFacade.h  MusicefyColorScheme.cpp  MusicefyColorScheme.h  ThemeManager.cpp  ThemeManager.h  ThemeMode.cpp  ThemeMode.h
tests/: CMakeLists.txt  testalbumviewmodel.cpp  testartistviewmodel.cpp  testbotdetection.cpp  testcardcolorglowbehavior.cpp  testcontainer.cpp  testcoverimage.cpp  testdatabase.cpp  testdi.cpp  testdiscoverviewmodel.cpp  testhct.cpp  testhomeviewmodel.cpp  testimageservices.cpp  testlibraryservice.cpp  testlibraryviewmodel.cpp  testmainviewmodel.cpp  testmodels.cpp  testoverlayanimator.cpp  testpalettes.cpp  testplayback.cpp  testplayerviewmodel.cpp  testplaylistpickerdialog.cpp  testplaylistviewmodel.cpp  testsearchviewmodel.cpp  testservices.cpp  testsettingscontrol.cpp  testsleeptimer.cpp  testsmtccontroller.cpp  testsources.cpp  testsourceviewmodel.cpp  testsubsonic.cpp  testsvgicon.cpp  testtheme.cpp  testyoutubecore.cpp  testyoutubeprovider.cpp
tests/mock/: MockHttpClient.cpp  MockHttpClient.h
(+252 files in other folders)
